prometheus/prometheus-node-exporter.ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"nodeName":"c-5qdp4:m-f5d75f31e94f","addresses":["51.77.137.108"],"port":9100,"protocol":"TCP","podName":"prometheus:prometheus-node-exporter-jqmcz","allNodes":false},{"nodeName":"c-5qdp4:m-f97c5d29941b","addresses":["51.77.136.161"],"port":9100,"protocol":"TCP","podName":"prometheus:prometheus-node-exporter-g9jgr","allNodes":false},{"nodeName":"c-5qdp4:m-b8a9f715dbb6","addresses":["51.77.137.98"],"port":9100,"protocol":"TCP","podName":"prometheus:promethe [...]
  labels:
    app: prometheus
    chart: prometheus-8.11.0
    component: node-exporter
    heritage: Tiller
    io.cattle.field/appId: prometheus
    release: prometheus
  name: prometheus-node-exporter
  namespace: prometheus
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: prometheus
      component: node-exporter
      release: prometheus
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prometheus
        chart: prometheus-8.11.0
        component: node-exporter
        heritage: Tiller
        release: prometheus
    spec:
      containers:
      - args:
        - --path.procfs=/host/proc
        - --path.sysfs=/host/sys
        image: prom/node-exporter:v0.17.0
        imagePullPolicy: IfNotPresent
        name: prometheus-node-exporter
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: metrics
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /host/proc
          name: proc
          readOnly: true
        - mountPath: /host/sys
          name: sys
          readOnly: true
      dnsPolicy: ClusterFirst
      hostNetwork: true
      hostPID: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: prometheus-node-exporter
      serviceAccountName: prometheus-node-exporter
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /proc
          type: ''
        name: proc
      - hostPath:
          path: /sys
          type: ''
        name: sys
  templateGeneration: 1
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
