prometheus/prometheus-alertmanager.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    chart: prometheus-8.9.2
    component: alertmanager
    heritage: Tiller
    io.cattle.field/appId: prometheus
    release: prometheus
  name: prometheus-alertmanager
  namespace: prometheus
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9093
  selector:
    app: prometheus
    component: alertmanager
    release: prometheus
  sessionAffinity: None
  type: ClusterIP
