prometheus/prometheus-kube-state-metrics.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    app: prometheus
    chart: prometheus-6.2.1
    component: kube-state-metrics
    heritage: Tiller
    io.cattle.field/appId: prometheus
    release: prometheus
  name: prometheus-kube-state-metrics
  namespace: prometheus
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: prometheus
    component: kube-state-metrics
    release: prometheus
  sessionAffinity: None
  type: ClusterIP
