prometheus/prometheus-pushgateway.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: pushgateway
  labels:
    app: prometheus
    chart: prometheus-8.9.2
    component: pushgateway
    heritage: Tiller
    io.cattle.field/appId: prometheus
    release: prometheus
  name: prometheus-pushgateway
  namespace: prometheus
spec:
  ports:
  - name: http
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app: prometheus
    component: pushgateway
    release: prometheus
  sessionAffinity: None
  type: ClusterIP
