prometheus/prometheus-server.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    chart: prometheus-8.11.0
    component: server
    heritage: Tiller
    io.cattle.field/appId: prometheus
    release: prometheus
  name: prometheus-server
  namespace: prometheus
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
    component: server
    release: prometheus
  sessionAffinity: None
  type: ClusterIP
