prometheus/prometheus-grafana.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["51.77.136.161"],"port":80,"protocol":"HTTP","serviceName":"prometheus:prometheus-grafana","ingressName":"prometheus:prometheus-grafana","hostname":"prometheus-grafana.prometheus.51.77.136.161.xip.io","allNodes":true}]'
  labels:
    app: grafana
    chart: grafana-0.0.31
    heritage: Tiller
    io.cattle.field/appId: prometheus
    release: prometheus
  name: prometheus-grafana
  namespace: prometheus
spec:
  rules:
  - host: prometheus-grafana.prometheus.51.77.136.161.xip.io
    http:
      paths:
      - backend:
          serviceName: prometheus-grafana
          servicePort: 80
