prometheus/prometheus-server.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["51.77.136.161"],"port":80,"protocol":"HTTP","serviceName":"prometheus:prometheus-server","ingressName":"prometheus:prometheus-server","hostname":"prometheus-server.prometheus.51.77.136.161.xip.io","allNodes":true}]'
  labels:
    app: prometheus
    chart: prometheus-6.2.1
    component: server
    heritage: Tiller
    io.cattle.field/appId: prometheus
    release: prometheus
  name: prometheus-server
  namespace: prometheus
spec:
  rules:
  - host: prometheus-server.prometheus.51.77.136.161.xip.io
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 80
